promart/k8s/promart/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform
  namespace: zeus
  labels:
    zeus-application: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      zeus-application: platform
  template:
    metadata:
      labels:
        zeus-application: platform
    spec:
      containers:
        - name: platform
          imagePullPolicy: Always
          image: promartio/promart
          ports:
            - containerPort: 8080
