promart/k8s/promart/service.yml
apiVersion: v1
kind: Service
metadata:
  name: platform
  namespace: zeus
  labels:
    zeus-application: platform
spec:
  ports:
  - port: 8080
    name: platform
  type: ClusterIP
  selector:
    zeus-application: platform
