promart/k8s/promart/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
  name: platform
  namespace: zeus
spec:
  tls:
  - hosts:
    - platform.ingress.dev.promart.shoot.canary.k8s-hana.ondemand.com
    secretName: platform-certificate
  rules:
    - host: platform.ingress.dev.promart.shoot.canary.k8s-hana.ondemand.com
      http:
        paths:
          - path: /
            backend:
              serviceName: platform
              servicePort: 8080
